feat: add types script

--- a/components/tsconfig.json
+++ b/components/tsconfig.json
@@ -13,10 +13,9 @@
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noImplicitAny": true,
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": ["components/src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
