--- a/components/package.json
+++ b/components/package.json
@@ -7,13 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "fix": "prettier --write .",
+    "format:fix": "prettier --write .",
     "preview": "vite preview"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -42,8 +37,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
     "lint-staged": "^12.5.0",
     "prettier": "^2.6.2",
+    "typescript": "^4.5.5",
     "vite": "^4.4.5"
   },
   "development": {
