--- a/components/tsconfig.json
+++ b/components/tsconfig.json
@@ -17,5 +17,6 @@
     "jsx": "react-jsx"
   },
   "include": ["components/src"],
+  "exclude": ["**/*.scss"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
