--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format:fix": "prettier --write .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "c8 vitest"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -19,7 +20,6 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0",
     "sass": "^1.69.5"
   },
   "devDependencies": {
@@ -31,6 +31,7 @@
     "@typescript-eslint/parser": "^5.22.0",
     "@vitejs/plugin-react": "^4.1.1",
     "autoprefixer": "^10.4.16",
+    "c8": "^8.0.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
@@ -41,7 +42,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^12.5.0",
+    "nyc": "^15.1.0",
     "prettier": "^2.6.2",
+    "react-router-dom": "^6.18.0",
     "typescript": "^4.5.5",
     "vite": "^4.4.5",
     "vite-tsconfig-paths": "^4.2.1",
