--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
     "jsdom": "^22.1.0",
     "lint-staged": "^12.5.0",
     "nyc": "^15.1.0",
