--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
     "sass": "^1.69.5"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "@vitejs/plugin-react": "^4.1.1",
     "autoprefixer": "^10.4.16",
+    "babel-jest": "^29.7.0",
     "c8": "^8.0.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.14.0",
@@ -49,6 +53,7 @@
     "nyc": "^15.1.0",
     "prettier": "^2.6.2",
     "react-router-dom": "^6.18.0",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^4.5.5",
     "vite": "^4.4.5",
     "vite-tsconfig-paths": "^4.2.1",
