--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ESNext"
-    ],
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -20,15 +16,8 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": [
-    "components/src"
-  ],
-  "exclude": [
-    "**/*.scss",
-    "**/*.test.ts",
-    "**/*.test.tsx",
-    "**/*.spec.ts",
-  ],
+  "include": ["components/src"],
+  "exclude": ["**/*.scss", "**/*.test.ts", "**/*.test.tsx", "**/*.spec.ts"],
   "references": [
     {
       "path": "./tsconfig.node.json"
